cleaned up images and moved them into assets dir

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <div class="firework hide" ></div>
     <div id="container">
       <div id="rose_container" class="hide">
-        <img id="rose" class="pixelart" src="/rose_sprite.png" />
+        <img id="rose" class="pixelart" src="./src/assets/rose_sprite.png" />
       </div>
       <div id="character_container">
-        <img id="character" class="pixelart walk_right" src="/george.png" />
+        <img id="character" class="pixelart walk_right" src="./src/assets/george.png" />
       </div>
     </div>
     <div id="valentine_prompt">
