--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./src/assets/heart.png" />
     <link rel="stylesheet" href="./src/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Valentine?</title>
@@ -26,9 +26,6 @@
       <div style="align-self: center; justify-self: center;">
         <button onclick="onYesClick();">
           Yes
-        </button>
-        <button onClick="this.disabled=true;">
-          No
         </button>
       </div>
     </div>
