--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <p style="color: white">
         Will you be my Valentine?
       </p>
-      <div style="align-self: center; justify-self: center;">
+      <div style="display: flex; justify-content: center; align-items: center;">
         <button onclick="onYesClick();">
           Yes
         </button>
